--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-anndata>=0.9.1
+anndata>=0.11.3
 licorice_font>=0.0.3
 lightning>=2.0.1
 torch>=2.0
-scanpy==1.9.3
+scanpy>=1.11.0
 scikit-learn>=1.2.2
 webfiles
 vinplots
