--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 
 myst_parser==0.15.2
 pydata-sphinx-theme==0.7.1
-readthedocs-sphinx-search==0.1.1
+readthedocs-sphinx-search>=0.3.2
 sphinx==4.2.0
 sphinx-autoapi==2.0.0
